@@ -34,6 +34,7 @@ struct MockManager : Manager
   MOCK_CONST_METHOD0(UserName, std::string());
   MOCK_CONST_METHOD0(HostName, std::string());
   MOCK_CONST_METHOD1(UserIconFile, void(ReplyCallback const&));
+  MOCK_CONST_METHOD0(AutomaticLogin, bool());
 
   MOCK_METHOD0(ScreenSaverActivate, void());
   MOCK_METHOD0(ScreenSaverDeactivate, void());
