@@ -27,6 +27,7 @@ unity (7.4.0+16.04.20160906-0ubuntu2) UNRELEASED; urgency=medium
   * GnomeSession: Retrieve the session id using dbus if $XDG_SESSION_ID
     is not set
   * Round gtk scaling factor to closest integer. (LP: #1649736)
+  * Keep the screen locked if rebooting with autologin. (LP: #1600389)
 
   [ Marco Trevisan (Treviño) ]
   * LockScreenController: use InputMonitor to get all the events and
